# phone-email-auth-api

./: .envexample  .gitignore  manage.py  pyproject.toml
config/settings/: base.py
users/: admin.py  models.py
users/backends/: email_backend.py  phone_backend.py
users/migrations/: 0001_initial.py
