[tool.poetry]
name = "phone-email-auth-api"
version = "0.1.0"
description = ""
authors = ["Mustafa S. Hassan <developer.mustafa@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
